--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mamifero",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"tsc -p tsconfig.json",
+    "start": "node ./dist/server.js"
   },
   "repository": {
     "type": "git",
