--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./server/server.ts",
   "scripts": {
-    "build":"tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "start": "node ./dist/server.js",
-    "dev":"npx tsx watch ./server/server.ts"
+    "dev": "npx tsx watch ./server/server.ts"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/Flavio-Francisco/mamifero#readme",
   "devDependencies": {
     "@types/node": "^20.1.3",
+    "prisma": "^4.14.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.0",
     "fastify": "^4.17.0",
     "zod": "^3.21.4"
   }
