--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,7 +2,6 @@
   "name": "mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,6 +13,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
